--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "burger-app",
   "version": "0.1.0",
   "private": true,
-  "engines":{
-    "npm":"6.11.3",
-    "node":"12.11.1"
+  "engines": {
+    "npm": "6.11.3",
+    "node": "12.11.1"
   },
   "dependencies": {
     "@babel/core": "7.6.0",
@@ -32,6 +32,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -43,6 +45,7 @@
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path": "^0.12.7",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -73,7 +76,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node server.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
